# engn

./: .gitignore  AGENTS.md  README.md  bad.jsonl  ci.sh  engn.jsonl  engn.toml  mkdocs.yml  opencode.json  pyproject.toml  user-role.jsonl  vision.md
.beads/: issues.jsonl
.github/workflows/: sync-template.yml
docs/: cli.md  engn.md  index.md  projengn.md  sysengn.md
features/: environment.py
features/engn/: branching.feature  check.feature  clone_and_init.feature  context.feature  data_engine.feature  inheritance.feature  init.feature  issue_tracker.feature  ref_primitive.feature  version.feature
features/projengn/: version.feature
features/steps/: check_steps.py  common_steps.py  context_steps.py  data_engine_steps.py  filesystem_steps.py  git_steps.py  inheritance_steps.py  issue_tracker_steps.py  more_filesystem_steps.py  pm_steps.py  ref_steps.py  toolbar_steps.py  toolbar_ui_steps.py
features/sysengn/: toolbar.feature  version.feature
modules/: standard_modules.jsonl
modules/docs/: documentation.jsonl
scripts/bash/: verify_prod_deps.sh
src/engn/: config.py  issue_tracker.py  main.py  pm.py  project.py  utils.py
src/projengn/: main.py
src/sysengn/: auth.py  main.py  views.py
tests/engn/: test_block_properties.py  test_check.py  test_config.py  test_engn_main.py  test_init.py  test_issue_tracker.py  test_pm.py  test_pm_branching.py  test_pm_init.py  test_print.py  test_project_commands.py  test_reproduce_delete_bug.py  test_standard_modules.py  test_sysml_toaster.py  test_utils.py
tests/projengn/: test_project_scanning.py  test_projengn_main.py  (+1 more)
(+67 files in other folders)
