[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engn"
version = "0.1.0"
description = "The Intelligent Engine for Building Systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "astropy>=7.2.0",
    "flet[all]>=0.80.1",
    "gitpython>=3.1.46",
    "pydantic>=2.12.5",
]

[project.scripts]
engn = "engn.main:main"
sysengn = "sysengn.main:main"
projengn = "projengn.main:main"

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.behave]
paths = ["features/engn", "features/sysengn", "features/projengn"]
format = ["pretty"]

[tool.flet]
product_name = "SysEngn"
description = "Intelligent Workspace for Building Digital Systems"
path = "src"

[tool.flet.assets]
# This points to the folder inside 'src'
path = "engn/assets"
